# EcoLife

./: .gitignore  main.py  pyproject.toml  readme.md
classes/: user.py
static/: base.css  creds.json
templates/: base.html  genericerror.html  home.html  pastGames.html  question.html  results.html
templates/includes/: _footer.html  _jobsModal.html  _loginModal.html  _navbar.html  _registerModal.html
