[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
replit = "^3.2.4"
Flask = "^2.1.3"
cloud-sql-python-connector = "^0.8.0"
PyMySQL = "^1.0.2"
SQLAlchemy = "^1.4.40"
bcrypt = "^4.0.0"
passlib = "^1.7.4"

[tool.poetry.dev-dependencies]
python-lsp-server = "^1.5.0"
debugpy = "^1.6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"